[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thresholds"
version = "0.2.0"
description = "Find two-body hadronic thresholds compatible with given J^P quantum numbers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["particle>=0.24"]

[project.scripts]
threshold-finder = "threshold_finder.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["threshold_finder*"]
